# autoware.iv.universe

common/msgs/autoware_control_msgs/msg/: EmergencyMode.msg
control/vehicle_cmd_gate/: CMakeLists.txt  package.xml
control/vehicle_cmd_gate/launch/: vehicle_cmd_gate.launch  vehicle_cmd_gate.launch.xml
control/vehicle_cmd_gate/src/: vehicle_cmd_gate.cpp
localization/pose_estimator/ndt_scan_matcher/ndt/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_omp/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_pcl_modified/: CMakeLists.txt
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/: CMakeLists.txt  package.xml
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/include/ndt_scan_matcher/: ndt_scan_matcher_core.h  util_func.h
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp  ndt_scan_matcher_node.cpp
perception/object_recognition/detection/lidar_apollo_instance_segmentation/include/lidar_apollo_instance_segmentation/: detector.hpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/: CMakeLists.txt
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/blind_spot/: manager.h  scene.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/crosswalk/: manager.h  scene_crosswalk.h  scene_walkway.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/detection_area/: manager.h  scene.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/intersection/: manager.h  scene_intersection.h  scene_merge_from_private_road.h  util.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/stop_line/: manager.h  scene.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/scene_module/traffic_light/: manager.h  scene.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/include/utilization/: util.h
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/blind_spot/: scene.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/crosswalk/: scene_crosswalk.cpp  scene_walkway.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/detection_area/: scene.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/intersection/: scene_intersection.cpp  scene_merge_from_private_road.cpp  util.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/stop_line/: scene.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/scene_module/traffic_light/: scene.cpp
planning/scenario_planning/lane_driving/motion_planning/surround_obstacle_checker/: CMakeLists.txt  package.xml
planning/scenario_planning/lane_driving/motion_planning/surround_obstacle_checker/include/surround_obstacle_checker/: debug_marker.hpp  node.hpp
planning/scenario_planning/lane_driving/motion_planning/surround_obstacle_checker/src/: debug_marker.cpp  main.cpp  node.cpp
vehicle/util/vehicle_info/: CMakeLists.txt
vehicle/util/vehicle_info/src/: vehicle_info.cpp
